--- a/volume.yaml
+++ b/volume.yaml
@@ -29,7 +29,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - worker-node01
+          - aks-agentpool-47760521-vmss000001
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
