--- a/service.yaml
+++ b/service.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   selector:
     app: jenkins-server
-  type: NodePort
+  type: Loadbalancer
   ports:
     - port: 8080
       targetPort: 8080
