--- a/service.yaml
+++ b/service.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   selector:
     app: jenkins-server
-  type: NodePort
+  type: LoadBalancer
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 32000
+      # nodePort: 32000
